@@ -1,0 +1,15 @@
+This is a ZenMagick plugin to manage redirects for missing categories and products.
+
+Right now this is work in progress, and it is not expected to have a proper UI for some time.
+
+
+Installation
+============
+1) Unzip the plugin package into the zenmagick/plugins directory.
+2) Install plugin using the ZenMagick Plugin Manager.
+3) Configure via settings.
+
+
+Configure
+=========
+TODO:
