@@ -1,0 +1,65 @@
+<?php
+/*
+ * ZenMagick - Extensions for zen-cart
+ * Copyright (C) 2006-2009 zenmagick.org
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ */
+?>
+<?php
+
+
+/**
+ * Request controller of the redirector plugin.
+ *
+ * @author DerManoMann
+ * @package org.zenmagick.plugins.redirector
+ * @version $Id$
+ */
+class ZMRedirectorController extends ZMController {
+
+    /**
+     * Create new instance.
+     */
+    function __construct() {
+        parent::__construct();
+    }
+
+    /**
+     * Destruct instance.
+     */
+    function __destruct() {
+        parent::__destruct();
+    }
+
+
+    /**
+     * {@inheritDoc}
+     */
+    public function processGet($request) {
+        if (1933 == $request->getProductId()) {
+            ZMMessages::instance()->msg("Product expired - here's an exciting alternative!");
+            $view =  new ZMRedirectView();
+            $view->setRequestId('product_info');
+            $view->setParameter('products_id=1');
+            return $view;
+        }
+        echo $this->findView('product_not_found');
+        //var_dump(ZMUrlManager::instance());
+        die();
+        return $this->findView('product_not_found');
+    }
+
+}
